# sysconf

./: .gitignore  README.md  packages.toml  pyproject.toml  secrets.example.toml  sysconf.py
configs/: tailscale.toml  toolchains.toml  webpages.toml
configs/dotfiles/: bashrc  gitconfig  tmux.conf  vimrc
configs/nginx/: nginx.conf  site-bootstrap.conf.j2  site.conf.j2  sites.toml
configs/ssh/: hardening.conf
configs/systemd/: app.service.j2
lib/: __init__.py  base.py  clean.py  cron.py  files.py  git.py  packages.py  paths.py  prompts.py  secrets.py  security.py  services.py  setup.py  tailscale.py  toolchains.py  webpages.py
secrets.example/: README.md
