[project]
name = "sysconf"
version = "0.1.0"
description = "DIY configuration management for Linux systems"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "jinja2>=3.0",  # For config templating (optional but recommended)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

# For Python 3.10 compatibility (tomllib is built-in from 3.11)
py310 = [
    "tomli>=2.0",
]

[project.scripts]
sysconf = "sysconf:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
